[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "pylmcf"
version = "0.0.2"
description = "Python bindings for LEMON Min Cost Flow algorithm"
authors = [
    { name="Michał Startek", email="michal.startek@mimuw.edu.pl" }
]
dependencies = ["numpy", "pybind11", "numba", "networkx", "scipy", "matplotlib"]
