[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "pylmcf"
version = "0.0.4"
description = "Python bindings for Network Simplex algorithm from LEMON library"
authors = [
    { name="Michał Startek", email="michal.startek@mimuw.edu.pl" }
]
